--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -21,6 +21,6 @@
       "description": "This is a laboratory activity.",
       "skills": ["React", "HTML", "CSS"],
       "demo": "https://sstteward-portfolio.netlify.app/",
-      "source": "https://www.github.com"
+      "source": "https://github.com/sstteeward/portfolio-website"
     }
   ]
